app/style/2020/list.scss
main > article[data-action="list"] {
	display: grid;
	grid-template-areas: "header" "form";
	grid-template-rows: min-content 1fr;
	height: 100%;

	> header {
		grid-area: header;

		> .summary {
			padding: 13px 10px 12px;
			position: absolute;
			right: 0;
			white-space: nowrap;
		}
	}

	> form {
		display: grid;
		grid-area: form;
		grid-template-areas: "table" "footer";
		grid-template-rows: 1fr min-content;
		height: 100%;
		overflow: auto;

		> table {
			border-collapse: collapse;
			display: block;
			grid-area: table;
			margin: 0 -1px -1px 0;
			overflow-y: auto;

			tr {
				> td, > th {
					border-bottom: 1px solid #d8d8d8;
					border-spacing: 0;
					padding: .6em;

					&:last-child {
						border-right: 1px solid #d8d8d8;
					}

					&:not(:first-child) {
						cursor: pointer;
					}
				}
			}

			> thead > tr > * {
				background: #f8f8f8;
			}

			> thead > .properties > .select > input[name=select] {
				display: none;
			}

			> tbody > tr:nth-child(even) > * {
				background: #f8f8f8;
			}

			> tbody > tr:nth-child(odd) > * {
				background: white;
			}
		}

		> footer {
			grid-area: footer;
		}
	}
}

